--- a/package.json
+++ b/package.json
@@ -50,7 +50,12 @@
     }
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.16.0",
+    "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
+    "jsonwebtoken": "^7.2.1",
+    "mongoose": "^4.7.9"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
