--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "express": "^4.14.0",
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.2.1",
-    "mongoose": "^4.7.9"
+    "mongoose": "^4.7.9",
+    "morgan": "^1.7.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
