--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.9",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "validator": "^6.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
