--- a/bower.json
+++ b/bower.json
@@ -5,28 +5,30 @@
   "authors": [
     "sarahmendham <sarahemendham@gmail.com>"
   ],
-    "license": "ISC",
-    "homepage": "",
-    "ignore": [
-      "**/.*",
-      "node_modules",
-      "bower_components",
-      "test",
-      "tests"
-    ],
-    "dependencies": {
-      "angular": "^1.5.8",
-      "angular-jwt": "^0.1.8",
-      "angular-ui-router": "^0.3.2",
-      "bootstrap": "^3.3.7",
-      "angular-resource": "^1.5.9"
-    },
-    "overrides": {
-      "bootstrap": {
-        "main": [
-          "dist/css/bootstrap.css",
-          "dist/js/bootstrap.js"
-        ]
-      }
+  "license": "ISC",
+  "homepage": "",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "angular": "^1.5.8",
+    "angular-jwt": "^0.1.8",
+    "angular-ui-router": "^0.3.2",
+    "bootstrap": "^3.3.7",
+    "angular-resource": "^1.5.9",
+    "angular-animate": "^1.6.1",
+    "angular-bootstrap": "^2.5.0"
+  },
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "dist/css/bootstrap.css",
+        "dist/js/bootstrap.js"
+      ]
     }
   }
+}
