--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "bootstrap": "^3.3.7",
     "angular-resource": "^1.5.9",
     "angular-animate": "^1.6.1",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "angular-swipe": "^0.2.0"
   },
   "overrides": {
     "bootstrap": {
