--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     }
   },
   "dependencies": {
+    "angular-swipe": "^0.4.0",
     "async": "^2.1.4",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.16.0",
@@ -61,6 +62,7 @@
     "validator": "^6.2.1"
   },
   "devDependencies": {
+    "angular-swipe": "^0.4.0",
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "bower": "^1.8.0",
