--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "angular-swipe": "^0.4.0",
+    "angular-touch": "^1.6.1",
     "async": "^2.1.4",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.16.0",
