--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.9",
     "morgan": "^1.7.0",
+    "multer": "^1.3.0",
     "validator": "^6.2.1"
   },
   "devDependencies": {
