--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "express-jwt": "^5.1.0",
+    "gsap": "^1.19.1",
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.9",
     "morgan": "^1.7.0",
