--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-animate": "^1.6.1",
     "angular-bootstrap": "^2.5.0",
     "angular-touch": "^1.6.1",
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "ng-file-upload": "^12.2.13"
   },
   "overrides": {
     "bootstrap": {
