--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "angular-touch": "^1.6.1",
     "async": "^2.1.4",
+    "aws-sdk": "^2.9.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
@@ -60,6 +61,7 @@
     "mongoose": "^4.7.9",
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
+    "uuid": "^3.0.1",
     "validator": "^6.2.1"
   },
   "devDependencies": {
