--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,6 @@
     "animate.css": "^3.5.2",
     "angular-slick": "^0.2.1",
     "ng-file-upload": "^12.2.13"
-
   },
   "overrides": {
     "bootstrap": {
@@ -35,5 +34,8 @@
         "dist/js/bootstrap.js"
       ]
     }
+  },
+  "resolutions": {
+    "angular": "1.6.1"
   }
 }
